--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
@@ -10,6 +11,10 @@
     "redux": "^4.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build-css | npm run build",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "dev": "npm run watch-css | npm start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
