--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
     "node-sass-chokidar": "^1.3.4",
     "prop-types": "^15.7.2"
   }
